# loophole_go

./: .env.example  README.md  SEEKING_LOG.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LIMITATIONS.md  SESSION_REVIEW_TEMPLATE.md  TRUST_MODEL.md  operator-guide.md
docs/comparison/: 2026-04-06-one-pass-summary.md
docs/packets/: 2026-04-06-go-style-treatment-packet.md
loophole/: errors.py  llm.py  main.py  models.py  prompts.py  session.py  visualize.py
loophole/agents/: judge.py  legislator.py  loophole_finder.py  overreach_finder.py
tests/: test_agent_protocol.py  test_llm_boundary.py  test_main_protocol.py  test_packaging.py  test_session_and_visualize.py
