[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loophole"
version = "0.1.0"
description = "Adversarial moral-legal code system - stress-test ethical principles through adversarial AI agents"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.scripts]
loophole = "loophole.main:app"

[tool.setuptools.packages.find]
include = ["loophole*"]
exclude = ["sessions*", "tests*", "examples*", "docs*"]
